# VeloQR

./: .gitignore  .npmignore  CHANGELOG  QUICKSTART.md  README.md  README.npm.md  WASM_CACHE_README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
assets/: index-2FM4Z6d1.js  index-B0IAYeYh.js  index-BjD2aZ7v.css  index-BwJffbkh.js  index-C2BIZzl8.js  index-CLMYD9to.js  index-CQsAayK0.js  index-Cw4DQ_VF.js  index-D2_Uuyk9.js  index-GqbjbeS0.js  index-UoTaR7lS.css  index-vD6qTExd.js  index-yxYBp8Bp.css  worker.js
assets/rust-qr/pkg/: package.json  veloqr.js  worker.js
example/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
example/public/: worker.js
example/public/rust-qr/pkg/: veloqr.d.ts  veloqr.js  veloqr_bg.wasm  veloqr_bg.wasm.d.ts  worker.js
example/src/: 60fps-demo.tsx  App.tsx  CustomizationDemo.tsx  MRZDemo.tsx  index.css  main.tsx  preprocessing-demo.tsx
public/: worker.js
rust-qr/: Cargo.toml  LICENSE
rust-qr/scripts/: pre-publish-check.sh
rust-qr/src/: lib.rs  ocr.rs
scripts/: fix-release-package.js  minify-worker.mjs  pre-publish-check.sh  update-version.sh  verify-setup.sh
src/: MRZImageScanner.tsx  MRZScanner.tsx  QRImageScanner.tsx  QRScanner.tsx  index.ts  service-worker.js  types.ts
src/components/: AnimationStyles.ts  CameraSwitchIcon.tsx  FlashSwitchIcon.tsx  ImageProcessingAnimation.tsx  LoadingSpinner.tsx  MRZAnimationStyles.ts  MRZImageProcessingAnimation.tsx  MRZScanningAnimation.tsx  ScanningAnimation.tsx
src/constants/: cameraErrors.ts  defaultTexts.ts
src/hooks/: useMRZScanner.ts  useQRScanner.ts
src/utils/: browser-detection.ts  cache-management.ts  camera-manager.ts  mrz-processor.ts  ocr-processor.ts  performanceOptimizer.ts  qr-processor.ts  service-worker-manager.ts  vibrate.ts  wasm-cache.ts  wasm-loader.ts  worker-helper.ts
src/workers/: worker.js
