[package]
name = "veloqr"
version = "1.0.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rqrr = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
ndarray = "0.15"
getrandom = { version = "0.2", features = ["js"] }

# Tract is too heavy for WASM, we'll use a simpler approach
# tract-onnx = { version = "0.21", default-features = false }
imp = "0.1.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary size
strip = true        # Strip symbols for smaller size
