[package]
name = "veloqr"
version = "1.1.2"
edition = "2021"
description = "QR code scanner for web worker in WebAssembly with Rust" 
repository = "https://github.com/vkhangstack/veloqr"
license = "MIT OR Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rqrr = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = { version = "0.25", default-features = false }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary size
strip = true        # Strip symbols for smaller size